# src/shared/api/swagger.json
@@ -170,6 +170,75 @@
         }
       }
     },
+    "/api/v1/shipment/stored": {
+      "get": {
+        "tags": [
+          "shipment-controller"
+        ],
+        "operationId": "findBy",
+        "parameters": [
+          {
+            "name": "phoneNumber",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "inn",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ShipmentPriceView"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/shipment/stored/{id}": {
+      "get": {
+        "tags": [
+          "shipment-controller"
+        ],
+        "operationId": "findById",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/ShipmentPriceView"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/payment/tinkoff/{paymentId}/confirm": {
       "get": {
         "tags": [
@@ -394,6 +463,9 @@
           },
           "client": {
             "$ref": "#/components/schemas/ClientDto"
+          },
+          "salesman": {
+            "type": "string"
           }
         }
       },
@@ -411,7 +483,6 @@
       },
       "PaymentRequest": {
         "required": [
-          "salesman",
           "shipmentIds"
         ],
         "type": "object",
@@ -422,9 +493,6 @@
               "type": "integer",
               "format": "int64"
             }
-          },
-          "salesman": {
-            "type": "string"
           }
         }
       },
@@ -438,6 +506,27 @@
             "type": "string"
           },
           "paymentId": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "ShipmentPriceView": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "simcardId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "paymentId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "price": {
             "type": "integer",
             "format": "int64"
           }
